New files for 04_04

--- a/simple_cms/app/views/access/menu.html.erb
+++ b/simple_cms/app/views/access/menu.html.erb
@@ -6,5 +6,6 @@
   <ul>
     <li><%= link_to('Manage Subjects', subjects_path) %></li>
     <li><%= link_to('Manage Pages', pages_path) %></li>
+    <li><%= link_to('Manage Users', users_path) %></li>
   </ul>
 </div>
